resolved scrollbar spazz with math and ball margins

--- a/src/components/Main/styles.css
+++ b/src/components/Main/styles.css
@@ -45,3 +45,11 @@
   opacity: 10%;
 }
 
+.Ball6-container div {
+  background: rgb(62, 19, 119);
+  border-radius: 30px;
+  width: 80px;
+  height: 80px;
+  padding: 60px;
+  opacity: 10%;
+}
